# comuniveci_tests

./: .env.example  .gitignore  README.md  conftest.py  generate_report.py  pyproject.toml  pytest.ini  template.html
tests/: test_auth_login.py  test_auth_me.py  test_auth_register.py
tests_backend/: test_auth_login.py  test_auth_me.py  test_auth_register.py
tests_frontend/: test_admin_frontend.py  test_login_frontend.py  test_register_frontend.py
